--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,44 @@
-# Redis
-REDIS_HOST=...
-REDIS_PORT=...
+# LOCAL DEVELOPMENT
 
-# Neo4j
-NEO4J_USERNAME=...
-NEO4J_PASSWORD=...
-NEO4J_DATABASE=...
-NEO4J_HOST=...
-NEO4J_PORT=...
+# Redis (local Docker or cloud Upstash)
+# For cloud: replace localhost with <redis-url>.upstash.io and fill REDIS_PASSWORD
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_INIT_FROM_LOCAL=true
+# Set overwrite to true when you need to update all embeddings (e.g. the embedder model has changed) in a Vector Store
+REDIS_OVERWRITE_INDEX=false
 
-# Ollama
-OLLAMA_API_KEY=...
+# Pinecone (for vector storage in cloud)
+PINECONE_API_KEY=
+PINECONE_ENVIRONMENT=
+PINECONE_INDEX_NAME=remnote-graph-rag
+PINECONE_INIT_FROM_LOCAL=true
 
-# Tavily
-TAVILY_API_KEY=...
+# Neo4j (local Docker or Neo4j Sandbox/Aura)
+# For local: use HOST and PORT
+# For cloud: use URI (takes precedence over HOST:PORT)
+NEO4J_HOST=localhost
+NEO4J_PORT=7687
+NEO4J_URI=
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=
+NEO4J_DATABASE=neo4j
+NEO4J_INIT_FROM_LOCAL=true
 
-# Cohere rerank
-COHERE_API_KEY=...
+
+# PRODUCTION (Cloud Run)
 
 # Environment (DEV/PROD)
 ENV=DEV
 
+# API Keys
+OLLAMA_API_KEY=
+TAVILY_API_KEY=
+COHERE_API_KEY=
+
 # Langchain monitoring
-LANGSMITH_TRACING=true
-LANGSMITH_ENDPOINT=...
-LANGSMITH_API_KEY=...
-LANGSMITH_PROJECT=...
+LANGSMITH_TRACING=false
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=
