--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ llama-index-graph-stores-neo4j = "^0.5.1"
 llama-index-llms-ollama = "^0.9.1"
 llama-index-embeddings-ollama = "^0.8.6"
 llama-index-postprocessor-cohere-rerank = "^0.5.1"
+llama-index-vector-stores-pinecone = "^0.7.1"
 langchain = "^1.2.0"
 langchain-ollama = "^1.0.1"
 tavily-python = "^0.7.17"
