--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Free disk space on runner
+        run: |
+          echo "Disk usage before cleanup:"
+          df -h
+          sudo rm -rf /usr/share/dotnet || true
+          sudo rm -rf /usr/local/lib/android || true
+          sudo rm -rf /opt/ghc || true
+          sudo apt-get clean || true
+          docker system prune -af || true
+          docker builder prune -af || true
+          echo "Disk usage after cleanup:"
+          df -h
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
