--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,10 +58,6 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Set active GCP project
-        run: |
-          gcloud config set project "$PROJECT_ID"
-
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker $REGION-docker.pkg.dev --quiet --project "$PROJECT_ID"
 
@@ -91,7 +87,6 @@ jobs:
             --max-instances 10 \
             --command reflex \
             --args run,--env,prod,--backend-only,--backend-host,0.0.0.0 \
-            --set-env-vars "ENV=PROD" \
             --set-env-vars "REDIS_HOST=${{ secrets.REDIS_HOST }}" \
             --set-env-vars "REDIS_PORT=${{ secrets.REDIS_PORT }}" \
             --set-env-vars "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" \
@@ -141,8 +136,7 @@ jobs:
             --min-instances 0 \
             --max-instances 10 \
             --command caddy \
-            --args run,--config,/etc/caddy/Caddyfile,--adapter,caddyfile \
-            --set-env-vars "ENV=PROD"
+            --args run,--config,/etc/caddy/Caddyfile,--adapter,caddyfile
 
       - name: Show deployment URLs
         run: |
